cmake_minimum_required(VERSION 3.16)

project(Lab07-TO-EP03 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(Lab07-TO-EP03 main.cpp)

include(GNUInstallDirs)
install(TARGETS Lab07-TO-EP03
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)
